# qt-layout

./: .gitignore  CMakeLists.txt
forms/: test.ui
qss/: navigationBar.css
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
